# python-flask-api/swagger_server/controllers/default_controller.py
@@ -1,15 +1,0 @@
-import connexion
-import six
-
-from swagger_server import util
-
-
-def users_get():  # noqa: E501
-    """Returns a list of users.
-
-    Optional extended description in Markdown. # noqa: E501
-
-
-    :rtype: None
-    """
-    return 'do some magic!'
