# python-flask-api/swagger_server/controllers/info_controller.py
@@ -1,6 +1,7 @@
 import connexion
 import six
 
+from swagger_server.models.inline_response200 import InlineResponse200  # noqa: E501
 from swagger_server import util
 
 
@@ -12,6 +13,6 @@ def get_info(alias):  # noqa: E501
     :param alias: outlet alias
     :type alias: str
 
-    :rtype: bool
+    :rtype: InlineResponse200
     """
     return 'do some magic!'
