# python-flask-api/swagger_server/models/__init__.py
@@ -3,4 +3,5 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.outlet import Outlet
